[gd_scene load_steps=2 format=3 uid="uid://cm6sqp5p6xk1"]

[ext_resource type="Script" uid="uid://cav3m5nlrsh6y" path="res://misc/developer_menu.gd" id="1_3syth"]

[node name="DeveloperMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3syth")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelContainerDark"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="CustomFuncButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"GoldButton"
text = "CUSTOM FUNC"

[node name="DeletePlayerDataButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "DELETE GAME PROGRESS"

[node name="PrintPlayerDataButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PRINT GAME PROGRESS"

[node name="DeleteMetricsButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "DELETE METRICS"

[node name="PrintMetricsButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PRINT METRICS"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT "
